Fix cartItemPreview button issue on mobile

--- a/src/assets/styles/components/entities/cart/_cart-item-preview.scss
+++ b/src/assets/styles/components/entities/cart/_cart-item-preview.scss
@@ -53,6 +53,9 @@
     align-items: flex-start;
     gap: 0.25rem;
 
+    button {
+      max-width: 36px;
+    }
     small {
       font-size: 0.85rem;
       color: #555;
